chore: remove test from sonarqube configurations