@@ -24,7 +24,7 @@ class TestMySQLSGBD {
     private static Entity<PersonNotNull> personNotNullEntity;
 
     @BeforeAll
-    public static void init() throws EntityException, NoSuchMethodException, IllegalAccessException {
+    static void init() throws EntityException, NoSuchMethodException, IllegalAccessException {
         mySQLSGBD = new MySQLSGBD();
         personEntity = new Entity<>(Person.class);
         personLinkEntity = new Entity<>(PersonLink.class);
@@ -92,7 +92,7 @@ class TestMySQLSGBD {
     @Test
     void testSelectLike() {
         String tableName = personEntity.tableName();
-        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().getFirst();
 
         String expected = "SELECT * FROM eternia_person WHERE firstName LIKE ?;";
         String result = mySQLSGBD.selectLike(tableName, entityDataDTO);
@@ -104,7 +104,7 @@ class TestMySQLSGBD {
     void testSelectByQuery() {
         String tableName = personEntity.tableName();
         List<EntityDataDTO<?>> entityDataDTOs = new ArrayList<>();
-        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<Person> entityDataDTO = personEntity.getEntityDataDTOList().getFirst();
         entityDataDTOs.add(entityDataDTO);
 
         String expected = "SELECT * FROM eternia_person WHERE firstName = ?;";
@@ -152,7 +152,7 @@ class TestMySQLSGBD {
     @Test
     void testBuildReferenceColumn() {
         String expected = "FOREIGN KEY (firstPersonId) REFERENCES eternia_person (id) ON DELETE CASCADE";
-        String result = mySQLSGBD.buildReferenceColumn(personLinkEntity.getReferenceColumns().get(0));
+        String result = mySQLSGBD.buildReferenceColumn(personLinkEntity.getReferenceColumns().getFirst());
 
         Assertions.assertEquals(expected, result);
     }
@@ -225,7 +225,7 @@ class TestMySQLSGBD {
 
     @Test
     void testBuildDataColumn() {
-        EntityDataDTO<Person> dataDTO = personEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<Person> dataDTO = personEntity.getEntityDataDTOList().getFirst();
 
         String expected = "firstName VARCHAR(256)";
         String result = mySQLSGBD.buildDataColumn(dataDTO);
@@ -235,7 +235,7 @@ class TestMySQLSGBD {
 
     @Test
     void testBuildDataColumnNotNull() {
-        EntityDataDTO<PersonNotNull> dataDTO = personNotNullEntity.getEntityDataDTOList().get(0);
+        EntityDataDTO<PersonNotNull> dataDTO = personNotNullEntity.getEntityDataDTOList().getFirst();
 
         String expected = "firstName VARCHAR(256) NOT NULL";
         String result = mySQLSGBD.buildDataColumn(dataDTO);
